--- a/Xland.ipynb
+++ b/Xland.ipynb
@@ -5,8 +5,6 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "oSjqwPwiXxCf",
-        "fYSuZTE1Y4NA",
         "UFZ3e361Y6hb",
         "MBDZtOMH5FSQ",
         "JsW95dg75Jij",
@@ -214,6 +212,102 @@
       ],
       "metadata": {
         "id": "Mo4iz0KsXn4W"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import jax\n",
+        "import jax.numpy as jnp\n",
+        "from jax.nn import one_hot\n",
+        "\n",
+        "\n",
+        "NUM_TITLE_TYPES = 13\n",
+        "NUM_COLORS = 12\n",
+        "\n",
+        "\n",
+        "class ObservationActionEncoder(nnx.Module):\n",
+        "    def __init__(self,\n",
+        "                 num_actions: int,\n",
+        "                 hidden_dim: int,\n",
+        "                 action_embedding_dim: int,\n",
+        "                 output_channels: int,\n",
+        "                 num_title_types: int,\n",
+        "                 num_colors: int,\n",
+        "                 rngs: nnx.Rngs):\n",
+        "\n",
+        "\n",
+        "        self.num_actions = num_actions\n",
+        "        self.action_embedding_dim = action_embedding_dim\n",
+        "        self.num_title_types = num_title_types\n",
+        "        self.num_colors = num_colors\n",
+        "        self.output_channels = output_channels\n",
+        "\n",
+        "        self.action_linear_embed = nnx.Linear(num_actions, action_embedding_dim, rngs=rngs)\n",
+        "        self.action_layer_norm = nnx.LayerNorm(action_embedding_dim, rngs=rngs)\n",
+        "\n",
+        "        self.obs_input_channels_after_one_hot = self.num_title_types + self.num_colors\n",
+        "\n",
+        "        self.cnn_input_channels = self.obs_input_channels_after_one_hot + self.action_embedding_dim\n",
+        "\n",
+        "        self.conv1 = nnx.Conv(self.cnn_input_channels, 64, kernel_size=(3, 3), strides=(1, 1), padding='SAME', rngs=rngs)\n",
+        "        self.conv2 = nnx.Conv(hidden_dim, hidden_dim*2, kernel_size=(3, 3), strides=(1, 1), padding='SAME', rngs=rngs)\n",
+        "        self.conv_final = nnx.Conv(hidden_dim*2, self.output_channels, kernel_size=(1, 1), strides=(1, 1), padding='SAME', rngs=rngs)\n",
+        "\n",
+        "\n",
+        "    def __call__(self, obs_raw: jnp.ndarray, action: jnp.ndarray) -> jnp.ndarray:\n",
+        "\n",
+        "        #output: (Batch, H_out, W_out, output_channels)\n",
+        "\n",
+        "        original_obs_ndim = obs_raw.ndim\n",
+        "        if original_obs_ndim == 3:\n",
+        "            obs_raw = jnp.expand_dims(obs_raw, axis=0)\n",
+        "\n",
+        "        title_ids = obs_raw[..., 0]\n",
+        "        color_ids = obs_raw[..., 1]\n",
+        "\n",
+        "        titles_onehot = one_hot(title_ids, num_classes=self.num_title_types)\n",
+        "        colors_onehot = one_hot(color_ids, num_classes=self.num_colors)\n",
+        "\n",
+        "        # obs_processed : (Batch, H, W, self.obs_input_channels_after_one_hot)\n",
+        "        obs_processed = jnp.concatenate(\n",
+        "            [titles_onehot, colors_onehot], axis=-1\n",
+        "        )\n",
+        "\n",
+        "        action = action.astype(jnp.int32)\n",
+        "\n",
+        "        action_one_hot = one_hot(action, num_classes=self.num_actions)\n",
+        "\n",
+        "        action_embedding = self.action_linear_embed(action_one_hot)\n",
+        "        action_embedding = self.action_layer_norm(action_embedding) # (Batch, action_embedding_dim)|(action_embedding_dim,)\n",
+        "\n",
+        "\n",
+        "        H, W = obs_processed.shape[1], obs_processed.shape[2]\n",
+        "\n",
+        "        if action_embedding.ndim == 1:\n",
+        "            action_embedding = jnp.expand_dims(action_embedding, axis=0) # (1, action_embedding_dim)\n",
+        "\n",
+        "        #  action_embedding  -> (Batch, 1, 1, action_embedding_dim)\n",
+        "        #  (Batch, H, W, action_embedding_dim)\n",
+        "        action_spatial = jnp.expand_dims(jnp.expand_dims(action_embedding, axis=1), axis=1) # (Batch, 1, 1, D)\n",
+        "        action_spatial = jnp.tile(action_spatial, (1, H, W, 1)) # (Batch, H, W, D)\n",
+        "\n",
+        "        #  (Batch, H, W, self.cnn_input_channels)\n",
+        "        cnn_input = jnp.concatenate([obs_processed, action_spatial], axis=-1)\n",
+        "\n",
+        "        x = nnx.relu(self.conv1(cnn_input))\n",
+        "        x = nnx.relu(self.conv2(x))\n",
+        "        output_feature_map = self.conv_final(x)\n",
+        "\n",
+        "        if original_obs_ndim == 3:\n",
+        "            return jnp.squeeze(output_feature_map, axis=0)\n",
+        "        else:\n",
+        "            return output_feature_map"
+      ],
+      "metadata": {
+        "id": "0vUL9WewrbG3"
       },
       "execution_count": null,
       "outputs": []
@@ -1130,10 +1224,37 @@
         "      tx = None\n",
         "      assert False, config[\"TX\"] + \"is not available\"\n",
         "    train_state = train_state_from_model(model, tx)\n",
-        "\n"
+        "    runner_state = (train_state, rng_batch, start_timestep)\n",
+        "    runner_state, output = jax.lax.scan(_rollout_and_update_step, runner_state, None, config[\"NUM_UPDATES\"])\n",
+        "\n",
+        "    transitions, timesteps = output\n",
+        "    return {\"runner_state\": runner_state, \"transitions\": transitions, \"timesteps\": timesteps}\n",
+        "\n",
+        "  return train, model, manager, rng_batch\n"
       ],
       "metadata": {
         "id": "KadyzIyZ5f3J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def experiment(config):\n",
+        "  print(config)\n",
+        "  train_fn, model, manager, rng_batch = make_train(config)\n",
+        "  train_jit = nnx.jit(train_fn)\n",
+        "\n",
+        "  out = jax.block_until_ready(train_fn(rng_batch, model, manager))\n",
+        "  print(\"data shape:\", jax.tree_util.tree_map(lambda x: x.shape, out[\"transitions\"]))\n",
+        "\n",
+        "  train_state, rng_batch, last_timestep = out[\"runner_state\"]\n",
+        "\n",
+        "  model = model_from_train_state(train_state)\n"
+      ],
+      "metadata": {
+        "id": "bdrRSnBzwQfd"
       },
       "execution_count": null,
       "outputs": []
