use -1 for num steps to get max episode step

--- a/CCGymnax.ipynb
+++ b/CCGymnax.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "kaMjP4WH151p",
         "colab": {
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "aHxBAU0DucTa"
       },
@@ -263,7 +263,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "ekign_g124jb"
       },
@@ -578,7 +578,7 @@
       "metadata": {
         "id": "99gNpdlLq4fo"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -733,7 +733,7 @@
       "metadata": {
         "id": "7q1bAyD9tT0g"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -747,7 +747,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "wYwuxCahRDTY",
         "colab": {
@@ -953,6 +953,9 @@
         "    if config[\"NUM_STEPS\"] == -1 and hasattr(manager.env_params, \"max_steps_in_episode\"):\n",
         "      config[\"NUM_STEPS\"] = manager.env_params.max_steps_in_episode\n",
         "      print(config[\"NUM_STEPS\"])\n",
+        "    else:\n",
+        "      print(\"max_steps_in_episode not avaliable in env_params\", env_params)\n",
+        "      exit()\n",
         "\n",
         "    config[\"NUM_UPDATES\"] = (config[\"TOTAL_TIMESTEPS\"] // config[\"NUM_STEPS\"]// config[\"NUM_ENVS\"])\n",
         "\n",
@@ -1163,7 +1166,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "qs-bMLHZoXEK"
       },
@@ -1318,7 +1321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "jgyF_QGlpQSm"
       },
@@ -1401,7 +1404,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "yPAsYtRu8QaE"
       },
@@ -1571,7 +1574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "aQLsVFl-NhgM"
       },
@@ -1674,7 +1677,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "-dk74R8YRFy3",
         "colab": {
@@ -2143,7 +2146,7 @@
       "metadata": {
         "id": "HtWBWIRoDFGm"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
