--- a/Pointax.ipynb
+++ b/Pointax.ipynb
@@ -17,7 +17,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "322123ed-51ba-4830-e3a4-1bfb51f29871"
+        "outputId": "00fe06d7-e6a6-484c-eaba-cf7a26aedf95"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             "Requirement already satisfied: importlib_resources in /usr/local/lib/python3.11/dist-packages (from etils[epath,epy]->orbax-checkpoint->flax->gymnax) (6.5.2)\n",
             "Requirement already satisfied: zipp in /usr/local/lib/python3.11/dist-packages (from etils[epath,epy]->orbax-checkpoint->flax->gymnax) (3.23.0)\n",
             "Downloading gymnax-0.0.9-py3-none-any.whl (86 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.6/86.6 kB\u001b[0m \u001b[31m2.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m86.6/86.6 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: gymnax\n",
             "Successfully installed gymnax-0.0.9\n",
             "Collecting distrax\n",
@@ -98,14 +98,14 @@
             "Requirement already satisfied: attrs>=18.2.0 in /usr/local/lib/python3.11/dist-packages (from dm-tree->tensorflow-probability>=0.15.0->distrax) (25.3.0)\n",
             "Requirement already satisfied: wrapt>=1.11.2 in /usr/local/lib/python3.11/dist-packages (from dm-tree->tensorflow-probability>=0.15.0->distrax) (1.17.2)\n",
             "Downloading distrax-0.1.5-py3-none-any.whl (319 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m319.7/319.7 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m319.7/319.7 kB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: distrax\n",
             "Successfully installed distrax-0.1.5\n",
             "Collecting ogbench\n",
             "  Downloading ogbench-1.1.5-py3-none-any.whl.metadata (946 bytes)\n",
             "Collecting mujoco>=3.1.6 (from ogbench)\n",
-            "  Downloading mujoco-3.3.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl.metadata (44 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m44.4/44.4 kB\u001b[0m \u001b[31m2.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "  Downloading mujoco-3.3.5-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl.metadata (41 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m42.0/42.0 kB\u001b[0m \u001b[31m1.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting dm_control>=1.0.20 (from ogbench)\n",
             "  Downloading dm_control-1.0.31-py3-none-any.whl.metadata (1.6 kB)\n",
             "Requirement already satisfied: gymnasium[mujoco] in /usr/local/lib/python3.11/dist-packages (from ogbench) (1.2.0)\n",
@@ -143,21 +143,21 @@
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.11/dist-packages (from requests->dm_control>=1.0.20->ogbench) (2.5.0)\n",
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.11/dist-packages (from requests->dm_control>=1.0.20->ogbench) (2025.8.3)\n",
             "Downloading ogbench-1.1.5-py3-none-any.whl (8.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.9/8.9 MB\u001b[0m \u001b[31m11.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.9/8.9 MB\u001b[0m \u001b[31m57.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading dm_control-1.0.31-py3-none-any.whl (56.4 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.4/56.4 MB\u001b[0m \u001b[31m13.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hDownloading mujoco-3.3.4-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (6.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.6/6.6 MB\u001b[0m \u001b[31m93.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.4/56.4 MB\u001b[0m \u001b[31m15.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hDownloading mujoco-3.3.5-cp311-cp311-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl (6.6 MB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.6/6.6 MB\u001b[0m \u001b[31m90.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading dm_env-1.6-py3-none-any.whl (26 kB)\n",
             "Downloading glfw-2.9.0-py2.py27.py3.py30.py31.py32.py33.py34.py35.py36.py37.py38.p39.p310.p311.p312.p313-none-manylinux_2_28_x86_64.whl (243 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m243.5/243.5 kB\u001b[0m \u001b[31m16.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m243.5/243.5 kB\u001b[0m \u001b[31m16.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hDownloading labmaze-1.0.6-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (4.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m89.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m4.9/4.9 MB\u001b[0m \u001b[31m81.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: glfw, labmaze, dm-env, mujoco, dm_control, ogbench\n",
-            "Successfully installed dm-env-1.6 dm_control-1.0.31 glfw-2.9.0 labmaze-1.0.6 mujoco-3.3.4 ogbench-1.1.5\n",
+            "Successfully installed dm-env-1.6 dm_control-1.0.31 glfw-2.9.0 labmaze-1.0.6 mujoco-3.3.5 ogbench-1.1.5\n",
             "Collecting git+https://github.com/riiswa/pointax.git\n",
-            "  Cloning https://github.com/riiswa/pointax.git to /tmp/pip-req-build-xkcsig3_\n",
-            "  Running command git clone --filter=blob:none --quiet https://github.com/riiswa/pointax.git /tmp/pip-req-build-xkcsig3_\n",
+            "  Cloning https://github.com/riiswa/pointax.git to /tmp/pip-req-build-gd73auq3\n",
+            "  Running command git clone --filter=blob:none --quiet https://github.com/riiswa/pointax.git /tmp/pip-req-build-gd73auq3\n",
             "  Resolved https://github.com/riiswa/pointax.git to commit 03c9448b397de8797a08400b32450bac4aceb126\n",
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
             "  Getting requirements to build wheel ... \u001b[?25l\u001b[?25hdone\n",
@@ -212,8 +212,8 @@
             "Requirement already satisfied: zipp in /usr/local/lib/python3.11/dist-packages (from etils[epath,epy]->orbax-checkpoint->flax>=0.6.0->pointax==0.1.0) (3.23.0)\n",
             "Building wheels for collected packages: pointax\n",
             "  Building wheel for pointax (pyproject.toml) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pointax: filename=pointax-0.1.0-py3-none-any.whl size=16198 sha256=8cff59383b16845d9d399e7f2b859dcdca106ff741a8a3261a92b7213ab7ca57\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-ae_j_q7t/wheels/97/5e/c9/4e1d110271f38b95ad05dfbdc4f388efc7dc3d7259ca7ca7ef\n",
+            "  Created wheel for pointax: filename=pointax-0.1.0-py3-none-any.whl size=16198 sha256=101a3c4fa0a164bed14c27f42162551c97c636ceba5b1521367c30302e4ce31c\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-5aqizjha/wheels/97/5e/c9/4e1d110271f38b95ad05dfbdc4f388efc7dc3d7259ca7ca7ef\n",
             "Successfully built pointax\n",
             "Installing collected packages: pointax\n",
             "Successfully installed pointax-0.1.0\n",
@@ -222,7 +222,7 @@
             "Requirement already satisfied: absl-py in /usr/local/lib/python3.11/dist-packages (from ml_collections) (1.4.0)\n",
             "Requirement already satisfied: PyYAML in /usr/local/lib/python3.11/dist-packages (from ml_collections) (6.0.2)\n",
             "Downloading ml_collections-1.1.0-py3-none-any.whl (76 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.7/76.7 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m76.7/76.7 kB\u001b[0m \u001b[31m2.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: ml_collections\n",
             "Successfully installed ml_collections-1.1.0\n"
           ]
@@ -319,7 +319,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OfNv0jJ4GkWh",
-        "outputId": "02138020-a7ed-4e4a-9e5e-dfc9af0530aa"
+        "outputId": "ebebdf82-dbc7-40b8-fbc1-9db744e446ea"
       },
       "execution_count": 3,
       "outputs": [
@@ -802,29 +802,36 @@
         "    self.action_dim = action_dim\n",
         "    self.hidden_dim = hidden_dim\n",
         "\n",
+        "  def __call__(self, observations, rng):\n",
+        "    pi = self.trainable_actor(observations)\n",
+        "    action = pi.sample(seed=rng)\n",
+        "    return action, {}\n",
         "\n",
-        "  def dissagreement_loss(self, obs, actions, next_obs):\n",
+        "  def update(self,rng,obs,actions,next_obs,dones,info):\n",
+        "    return {}\n",
+        "\n",
+        "  def batch_disagreement_loss(self, rng_loss, obs, actions,next_obs,done,info):\n",
         "    error = self.trainable_disagreement(obs, actions, next_obs)\n",
         "    loss = jnp.mean(error)\n",
         "    return loss\n",
         "\n",
         "  def compute_intr_reward(self, obs, actions, next_obs):\n",
-        "    reward = self.disagreement.get_disagreement(obs, actions, next_obs)\n",
+        "    reward = self.trainable_disagreement.get_disagreement(obs, actions, next_obs)\n",
         "    return jnp.expand_dims(reward, axis=-1)\n",
         "\n",
-        "  def batch_critic_loss_with_intrinsic(self, rng, obs, actions, next_obs, dones, info):\n",
+        "  def batch_critic_loss(self, rng_act, obs, actions, next_obs, dones, info):\n",
         "    reward = self.compute_intr_reward(obs, actions, next_obs)\n",
         "\n",
-        "    discount = info[\"discount\"]\n",
-        "    rng, rng_act = jax.random.split(rng)\n",
-        "    pi = self.trainable_actor(obs)\n",
-        "    next_actions = pi.sample(seed=rng_act)\n",
+        "    discount = jnp.expand_dims(info[\"discount\"], axis=-1)\n",
         "\n",
+        "    def sample_action(rng, obs_single):\n",
+        "        pi = self.trainable_actor(obs_single)\n",
+        "        return pi.sample(seed=rng)\n",
         "\n",
+        "    next_actions = jax.vmap(sample_action)(rng_act, obs)\n",
         "    tq1, tq2 = self.trainable_critic_target(jnp.concatenate([next_obs, next_actions], axis=-1))\n",
         "    target_v = jnp.minimum(tq1, tq2)\n",
         "    target_q = reward + discount * target_v\n",
-        "\n",
         "    q1, q2 = self.trainable_critic(jnp.concatenate([obs, actions], axis=-1))\n",
         "    mse1 = (q1 - target_q) ** 2\n",
         "    mse2 = (q2 - target_q) ** 2\n",
@@ -832,11 +839,12 @@
         "\n",
         "    return loss\n",
         "\n",
-        "  def batch_actor_loss_with_intrinsic(self, rng, obs, actions, next_obs, dones, info):\n",
-        "    rng, rng_act = jax.random.split(rng)\n",
-        "    pi = self.trainable_actor(obs)\n",
-        "    next_actions = pi.sample(seed=rng_act)\n",
+        "  def batch_actor_loss(self, rng_act, obs, actions, next_obs, dones, info):\n",
+        "    def sample_action(rng, obs_single):\n",
+        "        pi = self.trainable_actor(obs_single)\n",
+        "        return pi.sample(seed=rng)\n",
         "\n",
+        "    next_actions = jax.vmap(sample_action)(rng_act, obs)\n",
         "    q1, q2 = self.trainable_critic(jnp.concatenate([obs, actions], axis=-1))\n",
         "    q = jnp.minimum(q1, q2)\n",
         "    loss = -jnp.mean(q)\n",
@@ -846,7 +854,7 @@
       "metadata": {
         "id": "SkNoqTMnXqGt"
       },
-      "execution_count": 6,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -1082,7 +1090,7 @@
       "metadata": {
         "id": "99gNpdlLq4fo"
       },
-      "execution_count": 24,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1243,7 +1251,7 @@
       "metadata": {
         "id": "7q1bAyD9tT0g"
       },
-      "execution_count": 9,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1257,14 +1265,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 50,
       "metadata": {
         "id": "wYwuxCahRDTY",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 108
         },
-        "outputId": "e5460b78-3d64-4781-8926-e4039b94f590"
+        "outputId": "4e1520df-41da-485f-e66e-12dccdbaf5a4"
       },
       "outputs": [
         {
@@ -1278,7 +1286,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 50
         }
       ],
       "source": [
@@ -1320,7 +1328,7 @@
         "\n",
         "def train_state_from_model(model,tx=optax.adam(0.02)):\n",
         "    graphdef, trainable_params, vars, others = nnx.split(model,is_trainable, nnx.Variable,...)\n",
-        "    print(trainable_params)\n",
+        "    # print(trainable_params)\n",
         "\n",
         "    state = MyTrainState.create(\n",
         "      tx=tx,\n",
@@ -1486,6 +1494,9 @@
         "\n",
         "    if config[\"MODEL_NAME\"] == \"RandomExplorer\":\n",
         "        model = RandomExplorer(num_actions)\n",
+        "\n",
+        "    if config[\"MODEL_NAME\"] == \"DisagreementExplorer\":\n",
+        "        model = DisagreementExplorer(obs_dim, num_actions, config[\"NUM_HIDDEN\"], nnx.Rngs(config[\"SEED\"]))\n",
         "\n",
         "    @nnx.jit\n",
         "    def _train_step(state:MyTrainState, rng_loss, obs, action,next_obs,done,info):\n",
@@ -1666,7 +1677,7 @@
         "NUM_STEPS = 16 # @param [1,2,4,8,16] {\"type\":\"raw\"}\n",
         "NUM_HIDDEN = 128 # @param [32,64,128,256] {\"type\":\"raw\"}\n",
         "WD = 0.1 # @param [0,0.1,0.01,0.001] {\"type\":\"raw\"}\n",
-        "MODEL_NAME = \"DeepBayesianExplorer\"  #@param [\"DeepBayesianExplorer\",\"RandomExplorer\",\"PPOExplorer\"]\n",
+        "MODEL_NAME = \"DisagreementExplorer\"  #@param [\"DeepBayesianExplorer\",\"RandomExplorer\",\"PPOExplorer\",\"DisagreementExplorer\"]\n",
         "config = {\n",
         "    \"NUM_ENVS\": NUM_ENVS,    #\n",
         "    \"WD\": WD,\n",
@@ -2694,7 +2705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "-dk74R8YRFy3",
         "colab": {
