--- a/Pointax.ipynb
+++ b/Pointax.ipynb
@@ -820,7 +820,7 @@
         "    return jnp.expand_dims(reward, axis=-1)\n",
         "\n",
         "  def batch_critic_loss(self, rng_act, obs, actions, next_obs, dones, info):\n",
-        "    reward = self.compute_intr_reward(obs, actions, next_obs)\n",
+        "    reward = jax.lax.stop_gradient(self.compute_intr_reward(obs, actions, next_obs))\n",
         "\n",
         "    discount = jnp.expand_dims(info[\"discount\"], axis=-1)\n",
         "\n",
@@ -828,7 +828,7 @@
         "        pi = self.trainable_actor(obs_single)\n",
         "        return pi.sample(seed=rng)\n",
         "\n",
-        "    next_actions = jax.vmap(sample_action)(rng_act, obs)\n",
+        "    next_actions = jax.lax.stop_gradient(jax.vmap(sample_action)(rng_act, obs))\n",
         "    tq1, tq2 = self.trainable_critic_target(jnp.concatenate([next_obs, next_actions], axis=-1))\n",
         "    target_v = jnp.minimum(tq1, tq2)\n",
         "    target_q = reward + discount * target_v\n",
@@ -845,7 +845,7 @@
         "        return pi.sample(seed=rng)\n",
         "\n",
         "    next_actions = jax.vmap(sample_action)(rng_act, obs)\n",
-        "    q1, q2 = self.trainable_critic(jnp.concatenate([obs, actions], axis=-1))\n",
+        "    q1, q2 = jax.lax.stop_gradient(self.trainable_critic(jnp.concatenate([obs, actions], axis=-1)))\n",
         "    q = jnp.minimum(q1, q2)\n",
         "    loss = -jnp.mean(q)\n",
         "\n",
@@ -854,8 +854,207 @@
       "metadata": {
         "id": "SkNoqTMnXqGt"
       },
-      "execution_count": 52,
+      "execution_count": 62,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_train(config):\n",
+        "\n",
+        "    config[\"NUM_UPDATES\"] = (config[\"TOTAL_TIMESTEPS\"] // config[\"NUM_STEPS\"]// config[\"NUM_ENVS\"])\n",
+        "\n",
+        "    rng = jax.random.PRNGKey(config[\"SEED\"])\n",
+        "    rng_batch = jax.random.split(rng, config[\"NUM_ENVS\"])\n",
+        "\n",
+        "    manager = UnsupervisedRolloutWrapper(config[\"ENV_NAME\"])\n",
+        "    # it serves as action_dim which is 2 now\n",
+        "    num_actions = manager.env.num_actions()\n",
+        "    obs_dim = manager.env.observation_space(manager.env_params).shape[0]\n",
+        "\n",
+        "\n",
+        "    low = manager.env.observation_space(manager.env_params).low\n",
+        "    high = manager.env.observation_space(manager.env_params).high\n",
+        "\n",
+        "    print (\"low\",low)\n",
+        "    print (\"high\",high )\n",
+        "    if config[\"MODEL_NAME\"] == \"DeepBayesianExplorer\":\n",
+        "        model = DeepBayesianExplorer(obs_dim, num_actions,config[\"NUM_HIDDEN\"],\n",
+        "                                    nnx.Rngs(config[\"SEED\"]),weight_decay=config[\"WD\"],depth=config[\"DEPTH\"])\n",
+        "\n",
+        "    if config[\"MODEL_NAME\"] == \"PPOExplorer\":\n",
+        "        model = PPOExplorer(obs_dim,num_actions,config[\"NUM_HIDDEN\"],nnx.Rngs(config[\"SEED\"]),)\n",
+        "\n",
+        "    if config[\"MODEL_NAME\"] == \"RandomExplorer\":\n",
+        "        model = RandomExplorer(num_actions)\n",
+        "\n",
+        "    if config[\"MODEL_NAME\"] == \"DisagreementExplorer\":\n",
+        "        model = DisagreementExplorer(obs_dim, num_actions, config[\"NUM_HIDDEN\"], nnx.Rngs(config[\"SEED\"]))\n",
+        "\n",
+        "    # special for disagreement\n",
+        "    @nnx.jit\n",
+        "    def _dg_train_step(state:MyTrainState, rng_loss, obs, action,next_obs,done,info):\n",
+        "\n",
+        "      def _disagreement_loss_fn(graphdef,params,vars,others):\n",
+        "        model = nnx.merge(graphdef, params, vars,others)\n",
+        "        return model.batch_disagreement_loss(rng_loss,obs, action,next_obs,done,info).mean()\n",
+        "\n",
+        "      def _critic_loss_fn(graphdef,params,vars,others):\n",
+        "        model = nnx.merge(graphdef, params, vars,others)\n",
+        "        return model.batch_critic_loss(rng_loss,obs, action,next_obs,done,info).mean()\n",
+        "\n",
+        "      def _actor_loss_fn(graphdef,params,vars,others):\n",
+        "        model = nnx.merge(graphdef, params, vars,others)\n",
+        "        return model.batch_actor_loss(rng_loss,obs, action,next_obs,done,info).mean()\n",
+        "\n",
+        "      def _dg_opt_step(state,unused):\n",
+        "          dis_grads = jax.grad(_disagreement_loss_fn,1)(state.graphdef, state.params, state.vars,state.others)\n",
+        "          critic_grads = jax.grad(_critic_loss_fn,1)(state.graphdef, state.params, state.vars,state.others)\n",
+        "          actor_grads = jax.grad(_actor_loss_fn,1)(state.graphdef, state.params, state.vars,state.others)\n",
+        "\n",
+        "          state = state.apply_gradients(grads=dis_grads)\n",
+        "          state = state.apply_gradients(grads=critic_grads)\n",
+        "          state = state.apply_gradients(grads=actor_grads)\n",
+        "          return state, None\n",
+        "      state, _ = jax.lax.scan(_dg_opt_step, state, None, config[\"OPT_STEPS\"])\n",
+        "      return state\n",
+        "\n",
+        "    @nnx.jit\n",
+        "    def _train_step(state:MyTrainState, rng_loss, obs, action,next_obs,done,info):\n",
+        "\n",
+        "      def loss_fn(graphdef,params,vars,others):\n",
+        "        model = nnx.merge(graphdef, params, vars,others)\n",
+        "        return model.batch_loss(rng_loss,obs, action,next_obs,done,info).mean()\n",
+        "\n",
+        "      def opt_step(state,unused):\n",
+        "        grads = jax.grad(loss_fn,1)(state.graphdef, state.params, state.vars,state.others)\n",
+        "        return state.apply_gradients(grads=grads),None\n",
+        "      state, _ = jax.lax.scan(opt_step, state, None, config[\"OPT_STEPS\"])\n",
+        "\n",
+        "      return state\n",
+        "    @nnx.jit\n",
+        "    def _rollout_and_update_step(runner_state, unused):\n",
+        "        # we have to use train_state for jax.lax.scan\n",
+        "        train_state,  rng_batch,last_state = runner_state\n",
+        "\n",
+        "        model = model_from_train_state(train_state)\n",
+        "        rng_batch, rng_step,rng_update,rng_loss = batch_random_split(rng_batch,4)\n",
+        "\n",
+        "        rollout_results = manager.batch_rollout( rng_batch,model,env_state=last_state,num_steps =  config[\"NUM_STEPS\"])\n",
+        "        obs, action, reward, next_obs, done,state,info, cum_ret = rollout_results\n",
+        "\n",
+        "        # obs: num_envs x\n",
+        "        transition = Transition(obs, action, reward, next_obs, done,info)\n",
+        "\n",
+        "        last_state = info[\"last_state\"]\n",
+        "        info[\"reward\"] = reward\n",
+        "        update_info = manager.batch_update(rng_update, model,obs, action,next_obs,done,info)\n",
+        "        info.update(update_info)\n",
+        "        train_state = train_state_update_model(model,train_state)\n",
+        "\n",
+        "        if train_state.need_train:\n",
+        "            if config[\"MODEL_NAME\"] == \"DisagreementExplorer\":\n",
+        "              print(\"fuckingyes\")\n",
+        "              train_state = _dg_train_step(train_state, rng_loss, obs, action,next_obs,done,info)\n",
+        "            else:\n",
+        "              train_state = _train_step(train_state, rng_loss, obs, action,next_obs,done,info)\n",
+        "\n",
+        "        #works for tensors\n",
+        "        runner_state = (train_state, rng_batch,last_state)\n",
+        "        return runner_state, (transition, state)\n",
+        "\n",
+        "    def train(rng_batch,model,manager):\n",
+        "        # training loop\n",
+        "\n",
+        "        rng_batch,  rng_reset = batch_random_split(rng_batch, 2)\n",
+        "        start_state = manager.batch_reset(rng_reset)\n",
+        "\n",
+        "        if config[\"TX\"] == \"adamw\":\n",
+        "            tx = optax.adamw(config[\"LR\"])\n",
+        "        elif config[\"TX\"] == \"sgd\":\n",
+        "            tx = optax.sgd(config[\"LR\"])\n",
+        "        else:\n",
+        "            tx = None\n",
+        "            assert False, config[\"TX\"] + \" is not avaliable\"\n",
+        "        train_state = train_state_from_model(model,tx)\n",
+        "      #  rng, _rng = jax.random.split(rng)\n",
+        "        runner_state = (train_state,  rng_batch,start_state)\n",
+        "        runner_state, output= jax.lax.scan(_rollout_and_update_step, runner_state, None, config[\"NUM_UPDATES\"])\n",
+        "\n",
+        "        transitions,states = output\n",
+        "        return {\"runner_state\": runner_state, \"transitions\": transitions,\"states\":states}\n",
+        "        # return {\"runner_state\": runner_state, \"collect_data\": collect_data, \"max_mi_history\": max_mi_history}\n",
+        "\n",
+        "    return train,model, manager,rng_batch"
+      ],
+      "metadata": {
+        "id": "SuhwFRnAxUVy"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# NUM_UPDATES x NUM_ENVS x NUM_STEPS\n",
+        "class Transition(NamedTuple):\n",
+        "    obs: jnp.ndarray\n",
+        "    action: jnp.ndarray\n",
+        "    reward: jnp.ndarray\n",
+        "    next_obs: jnp.ndarray\n",
+        "    done: jnp.ndarray\n",
+        "    info: {}\n",
+        "\n",
+        "env_name = 'Umaze'  # @param [\"Umaze\"] {\"type\":\"raw\"}\n",
+        "NUM_ENVS = 4 # @param [1,2,4,8,16,32] {\"type\":\"raw\"}\n",
+        "TOTAL_TIMESTEPS = 2048 # @param [2048,16384,131072,1048576] {\"type\":\"raw\"}\n",
+        "DEPTH = 1 # @param [1,2,4] {\"type\":\"raw\"}\n",
+        "NUM_STEPS = 16 # @param [1,2,4,8,16] {\"type\":\"raw\"}\n",
+        "NUM_HIDDEN = 128 # @param [32,64,128,256] {\"type\":\"raw\"}\n",
+        "WD = 0.1 # @param [0,0.1,0.01,0.001] {\"type\":\"raw\"}\n",
+        "MODEL_NAME = \"DisagreementExplorer\"  #@param [\"DeepBayesianExplorer\",\"RandomExplorer\",\"PPOExplorer\",\"DisagreementExplorer\"]\n",
+        "config = {\n",
+        "    \"NUM_ENVS\": NUM_ENVS,    #\n",
+        "    \"WD\": WD,\n",
+        "    \"NUM_STEPS\": NUM_STEPS,   #steps of roll out between update\n",
+        "    \"SAC_D_STEPS\": 4,\n",
+        "    \"ENV_NAME\":env_name,\n",
+        "    \"SAC_STEP_SIZE\": 1.0,\n",
+        "    \"SEED\": 423,         #highly stochastic\n",
+        "    \"TOTAL_TIMESTEPS\": TOTAL_TIMESTEPS,   #total steps for all envs\n",
+        "    \"NUM_HIDDEN\":NUM_HIDDEN,\n",
+        "    \"TX\":\"adamw\",\n",
+        "    \"DEPTH\":DEPTH,\n",
+        "    \"LR\":2e-4,\n",
+        "    \"OPT_STEPS\":8,\n",
+        "    \"MODEL_NAME\": MODEL_NAME,\n",
+        "    \"DEBUG\": False,\n",
+        "}\n",
+        "\n",
+        "\n",
+        "out = experiment(config)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VEo42k3-xZ91",
+        "outputId": "ee645964-5ea3-4adb-b57d-7e915b2a2935"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'NUM_ENVS': 4, 'WD': 0.1, 'NUM_STEPS': 16, 'SAC_D_STEPS': 4, 'ENV_NAME': 'Umaze', 'SAC_STEP_SIZE': 1.0, 'SEED': 423, 'TOTAL_TIMESTEPS': 2048, 'NUM_HIDDEN': 128, 'TX': 'adamw', 'DEPTH': 1, 'LR': 0.0002, 'OPT_STEPS': 8, 'MODEL_NAME': 'DisagreementExplorer', 'DEBUG': False}\n",
+            "low -inf\n",
+            "high inf\n",
+            "fuckingyes\n",
+            "data shape: Transition(obs=(32, 4, 16, 4), action=(32, 4, 16, 2), reward=(32, 4, 16), next_obs=(32, 4, 16, 4), done=(32, 4, 16), info={'discount': (32, 4, 16), 'goal_position': (32, 4, 16, 2), 'is_success': (32, 4, 16), 'last_state': EnvState(time=(32, 4), position=(32, 4, 2), velocity=(32, 4, 2), desired_goal=(32, 4, 2)), 'reward': (32, 4, 16)})\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1270,7 +1469,7 @@
         "id": "wYwuxCahRDTY",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 108
+          "height": 72
         },
         "outputId": "4e1520df-41da-485f-e66e-12dccdbaf5a4"
       },
